--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ h2 {
     }
 
     #Bendahara {
-        margin-top: 62px;
+        margin-top: 95px;
     }
 
     #Kaderisasi {
@@ -219,5 +219,9 @@ h2 {
 
     #Akademi {
         margin-top: 37px;
+    }
+
+    #DCM {
+        margin-top: 95px;
     }
 }
