--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,4 +224,16 @@ h2 {
     #DCM {
         margin-top: 95px;
     }
+
+    #Syiar {
+        margin-top: 34px;
+    }
+
+    #DanaUsaha {
+        margin-top: 95px;
+    }
+
+    #Kemuslimahan {
+        margin-top: 95px;
+    }
 }
